Refine day rating spacing and calendar indicators

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section id="dayRatingModule" class="day-rating-inline" aria-label="Rate my day">
           <div class="rating-line">
             <div class="rating-field" data-field="score">
-              <span id="dayRatingScoreLabel" class="rating-label">Score:</span>
+              <span id="dayRatingScoreLabel" class="sr-only">Score</span>
               <button
                 id="dayRatingScore"
                 type="button"
