Refine ledger controls

--- a/index.html
+++ b/index.html
@@ -179,6 +179,24 @@
                 data-ledger-field="alipay"
                 placeholder="0"
               />
+              <div class="ledger-buttons" role="group" aria-label="Adjust Alipay balance">
+                <button
+                  class="ledger-adjust"
+                  type="button"
+                  data-ledger-field="alipay"
+                  data-ledger-direction="add"
+                  aria-label="Increase Alipay balance"
+                  title="Increase"
+                >＋</button>
+                <button
+                  class="ledger-adjust"
+                  type="button"
+                  data-ledger-field="alipay"
+                  data-ledger-direction="subtract"
+                  aria-label="Decrease Alipay balance"
+                  title="Decrease"
+                >－</button>
+              </div>
             </div>
             <div class="ledger-field">
               <label for="ledgerWeChat">WeChat</label>
@@ -191,6 +209,24 @@
                 data-ledger-field="wechat"
                 placeholder="0"
               />
+              <div class="ledger-buttons" role="group" aria-label="Adjust WeChat balance">
+                <button
+                  class="ledger-adjust"
+                  type="button"
+                  data-ledger-field="wechat"
+                  data-ledger-direction="add"
+                  aria-label="Increase WeChat balance"
+                  title="Increase"
+                >＋</button>
+                <button
+                  class="ledger-adjust"
+                  type="button"
+                  data-ledger-field="wechat"
+                  data-ledger-direction="subtract"
+                  aria-label="Decrease WeChat balance"
+                  title="Decrease"
+                >－</button>
+              </div>
             </div>
             <div class="ledger-field">
               <label for="ledgerBankCn">Bank Account (cn)</label>
@@ -203,6 +239,24 @@
                 data-ledger-field="bankCn"
                 placeholder="0"
               />
+              <div class="ledger-buttons" role="group" aria-label="Adjust Bank Account (cn) balance">
+                <button
+                  class="ledger-adjust"
+                  type="button"
+                  data-ledger-field="bankCn"
+                  data-ledger-direction="add"
+                  aria-label="Increase Bank Account (cn) balance"
+                  title="Increase"
+                >＋</button>
+                <button
+                  class="ledger-adjust"
+                  type="button"
+                  data-ledger-field="bankCn"
+                  data-ledger-direction="subtract"
+                  aria-label="Decrease Bank Account (cn) balance"
+                  title="Decrease"
+                >－</button>
+              </div>
             </div>
             <div class="ledger-field">
               <label for="ledgerDebt">Debt</label>
@@ -215,6 +269,24 @@
                 data-ledger-field="debt"
                 placeholder="0"
               />
+              <div class="ledger-buttons" role="group" aria-label="Adjust Debt balance">
+                <button
+                  class="ledger-adjust"
+                  type="button"
+                  data-ledger-field="debt"
+                  data-ledger-direction="add"
+                  aria-label="Increase Debt balance"
+                  title="Increase"
+                >＋</button>
+                <button
+                  class="ledger-adjust"
+                  type="button"
+                  data-ledger-field="debt"
+                  data-ledger-direction="subtract"
+                  aria-label="Decrease Debt balance"
+                  title="Decrease"
+                >－</button>
+              </div>
             </div>
             <div class="ledger-field">
               <label for="ledgerBankUk">Bank Account (uk)</label>
@@ -227,6 +299,24 @@
                 data-ledger-field="bankUk"
                 placeholder="0"
               />
+              <div class="ledger-buttons" role="group" aria-label="Adjust Bank Account (uk) balance">
+                <button
+                  class="ledger-adjust"
+                  type="button"
+                  data-ledger-field="bankUk"
+                  data-ledger-direction="add"
+                  aria-label="Increase Bank Account (uk) balance"
+                  title="Increase"
+                >＋</button>
+                <button
+                  class="ledger-adjust"
+                  type="button"
+                  data-ledger-field="bankUk"
+                  data-ledger-direction="subtract"
+                  aria-label="Decrease Bank Account (uk) balance"
+                  title="Decrease"
+                >－</button>
+              </div>
             </div>
           </div>
         </div>
