--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               aria-label="Hide ledger"
               title="Hide ledger"
             >
-              <span aria-hidden="true" data-ledger-eye>👁</span>
+              <span aria-hidden="true" data-ledger-eye>—</span>
             </button>
           </div>
         </div>
@@ -318,6 +318,11 @@
                 >－</button>
               </div>
             </div>
+          </div>
+          <div class="ledger-history">
+            <h4 class="ledger-history-heading">Adjustments</h4>
+            <div id="ledgerHistory" class="ledger-history-list" role="list"></div>
+            <p id="ledgerHistoryEmpty" class="ledger-history-empty" role="status">No adjustments for this day yet.</p>
           </div>
         </div>
       </section>
